Fix up WebXR Origin Trial names and formatting

Most of the Origin Trial names do not have spaces, so update this one
to match. Also, some things needs to alphabetized.

Bug: 779691
Change-Id: Ic7c45e751b35817c4bbaceb0b9f451cd375e4840
Reviewed-on: https://chromium-review.googlesource.com/1006044
Reviewed-by: David Dorwin <ddorwin@chromium.org>
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: David Dorwin <ddorwin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550089}
Former-commit-id: 06dc606fa3e5f4b3b524e0769af6a56e7b23e33b