chrome/browser/flag_descriptions.h
@@ -482,8 +482,6 @@ extern const char kFramebustingDescription[];
 
 extern const char kGamepadExtensionsName[];
 extern const char kGamepadExtensionsDescription[];
-extern const char kWebXrGamepadSupportName[];
-extern const char kWebXrGamepadSupportDescription[];
 
 extern const char kGpuRasterizationMsaaSampleCountName[];
 extern const char kGpuRasterizationMsaaSampleCountDescription[];
@@ -1093,6 +1091,8 @@ extern const char kWebvrDescription[];
 
 extern const char kWebXrName[];
 extern const char kWebXrDescription[];
+extern const char kWebXrGamepadSupportName[];
+extern const char kWebXrGamepadSupportDescription[];
 
 extern const char kWebXrHitTestName[];
 extern const char kWebXrHitTestDescription[];
